# sovereign

./: .gitignore  Cargo.toml  DEVELOPMENT_REPORT.md  LICENSE  README.md  TODO.md  test-extension.ts
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
intellij-plugin/: build.gradle.kts  settings.gradle.kts
intellij-plugin/src/main/kotlin/com/sovereign/plugin/actions/: BaseCodeAction.kt  ExplainCodeAction.kt  FixBugAction.kt  GenerateCodeAction.kt  GenerateTestsAction.kt  OpenChatAction.kt  RefactorCodeAction.kt  ReviewCodeAction.kt
intellij-plugin/src/main/kotlin/com/sovereign/plugin/services/: OllamaService.kt  SovereignService.kt
intellij-plugin/src/main/kotlin/com/sovereign/plugin/ui/: ChatPanel.kt  ResultPanel.kt  SovereignToolWindowFactory.kt
src/: daemon.rs  deepseek.rs  embeddings.rs  git.rs  llm.rs  main.rs  rag.rs  sync.rs  watcher.rs
src/agents/: chat.rs  code.rs  git_agent.rs  mod.rs  orchestrator.rs  search.rs
src/storage/: codebase.rs  crdt_memory.rs  memory.rs  mod.rs
vscode-extension/: package-lock.json  package.json  tsconfig.json
vscode-extension/src/: chatView.ts  extension.ts  ollama.ts
web-ui/: app.js  index.html  styles.css
